include/dss_capi.h

    /*! 
    Number of PD elements (including disabled elements)
    */
    DSS_CAPI_DLL int32_t PDElements_Get_Count(void);
    /*! 
    Get/Set Number of failures per year. For LINE elements: Number of failures per unit length per year.
    */
    DSS_CAPI_DLL double PDElements_Get_FaultRate(void);
    /*! 
    Set the first enabled PD element to be the active element.  Returns 0 if none found.
    */
    DSS_CAPI_DLL int32_t PDElements_Get_First(void);
    /*! 
    Boolean indicating of PD element should be treated as a shunt element rather than a series element. Applies to Capacitor and Reactor elements in particular.
    */
    DSS_CAPI_DLL uint16_t PDElements_Get_IsShunt(void);
    /*! 
    Advance to the next PD element in the circuit. Enabled elements only. Returns 0 when no more elements.
    */
    DSS_CAPI_DLL int32_t PDElements_Get_Next(void);
    /*! 
    Get/Set percent of faults that are permanent (require repair). Otherwise, fault is assumed to be transient/temporary.
    */
    DSS_CAPI_DLL double PDElements_Get_pctPermanent(void);
    DSS_CAPI_DLL void PDElements_Set_FaultRate(double Value);
    DSS_CAPI_DLL void PDElements_Set_pctPermanent(double Value);
    /*! 
    Get/Set name of active PD Element. Returns null string if active element is not PDElement type.
    */
    DSS_CAPI_DLL const char* PDElements_Get_Name(void);
    DSS_CAPI_DLL void PDElements_Set_Name(const char* Value);
    /*! 
    Accumulated failure rate for this branch on downline
    */
    DSS_CAPI_DLL double PDElements_Get_AccumulatedL(void);
    /*! 
    Failure rate for this branch. Faults per year including length of line.
    */
    DSS_CAPI_DLL double PDElements_Get_Lambda(void);
    /*! 
    Number of customers, this branch
    */
    DSS_CAPI_DLL int32_t PDElements_Get_Numcustomers(void);
    /*! 
    Sets the parent PD element to be the active circuit element.  Returns 0 if no more elements upline.
    */
    DSS_CAPI_DLL int32_t PDElements_Get_ParentPDElement(void);
    /*! 
    Average repair time for this element in hours
    */
    DSS_CAPI_DLL double PDElements_Get_RepairTime(void);
    /*! 
    Total number of customers from this branch to the end of the zone
    */
    DSS_CAPI_DLL int32_t PDElements_Get_Totalcustomers(void);
    /*! 
    Number of the terminal of active PD element that is on the "from" side. This is set after the meter zone is determined.
    */
    DSS_CAPI_DLL int32_t PDElements_Get_FromTerminal(void);
    /*! 
    Total miles of line from this element to the end of the zone. For recloser siting algorithm.
    */
    DSS_CAPI_DLL double PDElements_Get_TotalMiles(void);
    /*! 
    Integer ID of the feeder section that this PDElement branch is part of
    */
    DSS_CAPI_DLL int32_t PDElements_Get_SectionID(void);
    /*! 
    Average repair time for this element in hours
    */
    DSS_CAPI_DLL void PDElements_Set_RepairTime(double Value);